--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+body{
+    background: linear-gradient(#e66465, #9198e5);
+    height: 100vh;
+}
