--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ box-sizing: border-box;
 body{
     background: linear-gradient(#e66465, #9198e5);
     height: 100vh;
+}
 h1{
- margin-top:50px;
-  color:whitesmoke;
-  text-aling:center;
+ margin-top: 50px;
+ color: white;
+ text-align: center;
 }
